fix: conserver la compatibilité Android 21